--- a/docker-compose-nvidia.yaml
+++ b/docker-compose-nvidia.yaml
@@ -20,12 +20,12 @@ services:
         target: "/root/.cache"
     ports:
       - 7860:7860 # Host:Container
-    command: /app/run-webgui.sh
+    # command: /app/run-webgui.sh
     # command: conda run -n ldm /bin/bash -c "/app/run-webgui.sh"
     # interactive bash: docker exec -it NAME bash
-    # command: bash --login # let container stay open
-    # stdin_open: true
-    # tty: true
+    command: bash --login # let container stay open
+    stdin_open: true
+    tty: true
     deploy:
       resources:
         reservations:
